--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "critters": "^0.0.23",
     "eslint": "^9",
     "eslint-config-next": "15.5.5"
   }
