--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.5.1",
     "next": "15.5.5",
+    "next-intl": "^4.5.1",
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.1",
