--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.1",
+    "gsap": "^3.13.0",
     "next": "15.5.5",
     "next-intl": "^4.5.1",
     "nodemailer": "^7.0.10",
