--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "chart.js": "^4.5.1",
     "gsap": "^3.13.0",
+    "mapbox-gl": "^3.16.0",
     "next": "15.5.5",
     "next-intl": "^4.5.1",
     "nodemailer": "^7.0.10",
